fdo#40102 show full footnote text in index tooltip

Change-Id: I35acdaf4f62df7a1d375aed663c270e78ea70779